--- a/Discover-Bank-Phone/res/values/strings_bank_transfers.xml
+++ b/Discover-Bank-Phone/res/values/strings_bank_transfers.xml
@@ -43,7 +43,7 @@
     <string name="cancel_this_action">Cancel This Action</string>
 	<string name="cancel_this_action_content">Are you sure you wants to cancel? All information you have entered will be lost.</string>
     
-	<string name="transfer_success_title">You have successfully scheduled this transfer</string>
+	<string name="transfer_success_title">Your scheduled transfer has been completed successfully.</string>
 	
 	
 	<!-- Error Labels -->
