--- a/Discover-Bank-Phone/res/values/strings_detail_transactions.xml
+++ b/Discover-Bank-Phone/res/values/strings_detail_transactions.xml
@@ -25,6 +25,7 @@
     <string name="status">Status</string>
     <string name="confirmation_number">Confirmation Number</string>
     <string name="payment_detail">Payment Details</string>
+    <string name="reference_number">Reference Number</string>
     <string name="scheduled_payment">Scheduled Payment</string>
     <string name="completed_payment">Completed Payment</string>
     <string name="cancelled_payment">Cancelled Payment</string>
