US7225: Fixed the card so that it does not crash on login.

--- a/Discover-Card-Phone/res/layout/card_content_view.xml
+++ b/Discover-Card-Phone/res/layout/card_content_view.xml
@@ -5,7 +5,7 @@
     
     <fragment
         android:id="@+id/status_bar"
-        android:name="com.discover.mobile.card.navigation.StatusBarFragment"
+        android:name="com.discover.mobile.card.nav.StatusBarFragment"
         android:layout_width="match_parent"
         android:layout_height="40dp"/>
      <FrameLayout
