--- a/Discover-Bank-Phone/res/layout/payment_detail.xml
+++ b/Discover-Bank-Phone/res/layout/payment_detail.xml
@@ -33,9 +33,8 @@
             style="@style/blue_hyperlink"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/content_table"
+            android:layout_below="@+id/edit_payment_button"
             android:layout_centerHorizontal="true"
-            android:layout_marginTop="@dimen/groups_of_elements_padding"
             android:background="@null"
             android:text="@string/delete_payment" >
         </Button>
