--- a/Discover-Card-Phone/res/values/error_code_mapping.xml
+++ b/Discover-Card-Phone/res/values/error_code_mapping.xml
@@ -9,7 +9,7 @@
     <string name="E_4031101">We know you’re excited to get into the app, but you’ve tried to log in with the wrong username or password too many times. Please contact Customer Service at 1-877-742-7822 for assistance</string>
     <string name="E_4031104">Your online access is still being set up. Please try back again	later.</string>
     <string name="E_4031105">We\'re sorry, you may no longer use this Discover card account number to access the app. Instead, please visit www.discover.com to create User ID and password. If you have any questions, please contact Customer Service at 1-877-742-7822</string>
-    <string name="E_4031105_WITHUSERID">We\'re Sorry, you may no longer use this Discover Card account number	to access the app. Instead, please log in using	your User ID and Password. !~~!</string>
+    <string name="E_4031105_WITHUSERID">We\'re Sorry, you may no longer use this Discover Card account number	to access the app. Instead, please log in using	your User ID and Password. !~~! "&lt;br&#47;&gt;""&lt;br&#47;&gt; If you have any questions, please contact Customer Service at 1-877-742-7822</string>
     <string name="E_4031106">Your Discover Card Account Number has been changed. In order to	access your account through the mobile channel, you must first log in to the Account Center on www.discover.com. For more information,please contact Customer Service at 1-877-742-7822</string>
     <string name="E_4031401_NOTENROLLED">Help us keep your account safe by visiting discover.com on your primary computer to establish your set of security questions.</string>
     <string name="E_4031402">For security purposes, your online account has been locked.Please call Discover Customer Service at	1-888-251-8003 for information about accessing your account online.</string>
@@ -19,10 +19,11 @@
     <string name="E_4031401_UNVERIFIED">Help us keep your account safe by visiting discover.com on your primary PC to establish your set of security questions.</string>
     <string name="E_4031401_LOCKOUT">For security purposes, your online account has been locked.Please call Discover Customer Service at 1-888-251-8003 for information about accessing your account online.</string>
     <string name="E_0">We\'re sorry.Some of our web site features are unavailable at this time. We sincerely apologize for this temporary inconvenience and are working to resolve the issue.</string>
-    <string name="E_4031102">Due to special conditions related to your account, we could not	complete your request. Please contact Customer Service at 1-877-742-7822.</string>
+    <string name="E_4031102">Due to special conditions related to your account, we could not	complete your request. Please contact Customer Service at 1-800-347-2683.</string>
     <string name="E_4031102_SSO_DELINK">Due to special conditions related to your credit card account, we cannot provide you with access to your account information at this time.To recover your User ID, you will need to re-register for online account access at DiscoverBank.com.</string>
     <string name="E_4031102_SSO_DELINK_BUTTON">true.</string>
     <string name="E_4031102_SSO">Due to special conditions related to your credit card account, we can\'t provide you with access to your account information at this time.Because of increased security measures, you will need to log into Discover Bank in order to access your online account.</string>
+    <string name="E_4031102_SSN_NOT_MATCH">Due to special conditions related to your credit card account, we can\'t provide you with access to your account information at this time.Because of increased security measures, you will need to log into &lt;a href="http://www.discover.com">Discover Bank&lt;/a> in order to access your online account.</string>
     <string name="E_4031102_SSO_AccountNo">Can not Login with Account Number.</string>
     <string name="E_40311021">SSN NOT MATCHED !!</string>
     <string name="E_4031102_SSO_BUTTON">true.</string>
@@ -228,7 +229,7 @@
     <string name="E_T_4031102_SSO_DELINK">We\'re Sorry.</string>
 	<string name="E_T_4031102_SSO">We\'re Sorry.</string>
 	<string name="E_T_4031401_DENY">We\'re Sorry.</string>
-	<string name="E_T_4031106">Card Number Error</string>
+	<string name="E_T_4031106">We\'re Sorry</string>
 	<string name="E_T_4031101"> You\'ve Been Locked Out</string>
 	 <string name="E_T_503">We\'re Sorry</string>
 	 <string name="E_T_4031110">We\'re Sorry</string>
@@ -266,6 +267,7 @@
     <string name="E_T_5031007">Performing System Maintenance</string>
      <!-- <string name="E_T_503">Performing System Maintenance</string> -->
     <string name="E_T_4011107">Password Error</string>
+    <string name="E_T_4031102_SSN_NOT_MATCH">Secure Credit Card Log In</string>
     
     
     <!-- New Codes Message -->
@@ -338,7 +340,7 @@
      <string name="E_H_4031102_SSO_DELINK">0</string>
      <string name="E_H_4031102_SSO">0</string>
      <string name="E_H_4031105">0</string>
-     <string name="E_H_4031105_WITHUSERID">3</string>
+     <string name="E_H_4031105_WITHUSERID">0</string>
      <string name="E_H_4031106">0</string>
      
      <string name="E_H_4011107">3</string>
