DE4305 - Updated the text on the check deposit submissiona activity to more closely match the comps. Also unlocked orientation on that page so that you can rotate it while it is submitting. The code change was just to fix a sonar spacing warning.

--- a/Discover-Bank-Phone/res/layout/deposit_submission.xml
+++ b/Discover-Bank-Phone/res/layout/deposit_submission.xml
@@ -19,7 +19,7 @@
 
         <TextView
             android:id="@+id/sending_deposit_detail_label"
-            style="@style/body_copy"
+            style="@style/sub_copy_big"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@+id/sending_deposit_title_label"
