--- a/Discover-Card-Phone/res/values/strings_url.xml
+++ b/Discover-Card-Phone/res/values/strings_url.xml
@@ -1,7 +1,7 @@
 <resources>
 
-    <string name="base_url_dev">https://asys.m.discovercard.com</string>
-    <string name="url_in_use">https://asys.m.discovercard.com</string>
+    <string name="base_url_dev">https://mst0.discoverbank.com</string>
+    <string name="url_in_use">https://mst0.discoverbank.com</string>
     <string name="discover_url">/cardsvcs/acs/</string>
     <string name="forgotUserID_url">reg/v1/user/id</string>
     <string name="logOut_url">session/v1/delete</string>
