--- a/Discover-Bank-Phone/res/layout/customer_service.xml
+++ b/Discover-Bank-Phone/res/layout/customer_service.xml
@@ -7,107 +7,112 @@
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:paddingLeft="@dimen/forms_inner_padding"
-        android:paddingRight="@dimen/forms_inner_padding"
-        android:paddingBottom="@dimen/forms_inner_padding" >
+        android:layout_height="wrap_content" >
 
-        <TextView
-            android:id="@+id/phone_title_label"
-            style="@style/title_copy"
-            android:layout_width="wrap_content"
+        <RelativeLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="@dimen/between_related_elements_padding"
-            android:layout_marginRight="@dimen/forms_inner_padding"
-            android:layout_marginTop="@dimen/forms_inner_padding"
-            android:text="@string/by_phone" />
+            android:paddingBottom="@dimen/forms_inner_padding"
+            android:paddingLeft="@dimen/forms_inner_padding"
+            android:paddingRight="@dimen/forms_inner_padding" >
 
-        <TextView
-            android:id="@+id/card_phone_title_label"
-            style="@style/need_help_text"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/phone_title_label"
-            android:layout_marginTop="@dimen/between_related_elements_padding"
-            android:text="@string/discover_card" />
+            <TextView
+                android:id="@+id/phone_title_label"
+                style="@style/title_copy"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="@dimen/between_related_elements_padding"
+                android:layout_marginRight="@dimen/forms_inner_padding"
+                android:layout_marginTop="@dimen/forms_inner_padding"
+                android:text="@string/by_phone" />
 
-        <LinearLayout
-            android:id="@+id/card_phone_numbers_list"
-            style="@style/customer_service_table"
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/card_phone_title_label" >
-        </LinearLayout>
+            <TextView
+                android:id="@+id/card_phone_title_label"
+                style="@style/need_help_text"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/phone_title_label"
+                android:layout_marginTop="@dimen/between_related_elements_padding"
+                android:text="@string/discover_card" />
 
-        <TextView
-            android:id="@+id/bank_phone_title_label"
-            style="@style/need_help_text"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/card_phone_numbers_list"
-            android:layout_marginTop="@dimen/between_related_elements_padding"
-            android:text="@string/discover_bank" />
+            <LinearLayout
+                android:id="@+id/card_phone_numbers_list"
+                style="@style/customer_service_table"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/card_phone_title_label" >
+            </LinearLayout>
 
-        <LinearLayout
-            android:id="@+id/bank_phone_numbers_list"
-            style="@style/customer_service_table"
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/bank_phone_title_label" >
-        </LinearLayout>
+            <TextView
+                android:id="@+id/bank_phone_title_label"
+                style="@style/need_help_text"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/card_phone_numbers_list"
+                android:layout_marginTop="@dimen/between_related_elements_padding"
+                android:text="@string/discover_bank" />
 
-        <TextView
-            android:id="@+id/mail_title_label"
-            style="@style/title_copy"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/bank_phone_numbers_list"
-            android:layout_marginTop="@dimen/groups_of_elements_padding"
-            android:text="@string/by_mail" />
+            <LinearLayout
+                android:id="@+id/bank_phone_numbers_list"
+                style="@style/customer_service_table"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/bank_phone_title_label" >
+            </LinearLayout>
 
-        <TextView
-            android:id="@+id/card_mail_title_label"
-            style="@style/need_help_text"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/mail_title_label"
-            android:layout_marginTop="@dimen/between_related_elements_padding"
-            android:text="@string/discover_card" />
+            <TextView
+                android:id="@+id/mail_title_label"
+                style="@style/title_copy"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/bank_phone_numbers_list"
+                android:layout_marginTop="@dimen/groups_of_elements_padding"
+                android:text="@string/by_mail" />
 
-        <LinearLayout
-            android:id="@+id/card_mail_address_list"
-            style="@style/customer_service_table"
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/card_mail_title_label" >
-        </LinearLayout>
+            <TextView
+                android:id="@+id/card_mail_title_label"
+                style="@style/need_help_text"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/mail_title_label"
+                android:layout_marginTop="@dimen/between_related_elements_padding"
+                android:text="@string/discover_card" />
 
-        <TextView
-            android:id="@+id/bank_mail_title_label"
-            style="@style/need_help_text"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/card_mail_address_list"
-            android:layout_marginTop="@dimen/between_related_elements_padding"
-            android:text="@string/discover_bank" />
+            <LinearLayout
+                android:id="@+id/card_mail_address_list"
+                style="@style/customer_service_table"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/card_mail_title_label" >
+            </LinearLayout>
 
-        <LinearLayout
-            android:id="@+id/bank_mail_address_list"
-            style="@style/customer_service_table"
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/bank_mail_title_label" >
-        </LinearLayout>
+            <TextView
+                android:id="@+id/bank_mail_title_label"
+                style="@style/need_help_text"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/card_mail_address_list"
+                android:layout_marginTop="@dimen/between_related_elements_padding"
+                android:text="@string/discover_bank" />
 
-        <com.discover.mobile.bank.ui.widgets.BankLayoutFooter
-            android:id="@+id/bank_footer"
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/bank_mail_address_list" 
-            custom:footerType="11"
-            style="@style/bank_layout_footer_style"/>
+            <LinearLayout
+                android:id="@+id/bank_mail_address_list"
+                style="@style/customer_service_table"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/bank_mail_title_label" >
+            </LinearLayout>
+
+            <com.discover.mobile.bank.ui.widgets.BankLayoutFooter
+                android:id="@+id/bank_footer"
+                style="@style/bank_layout_footer_style"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/bank_mail_address_list"
+                custom:footerType="11" />
+        </RelativeLayout>
         
-         <com.discover.mobile.common.help.HelpWidget
+        <com.discover.mobile.common.help.HelpWidget
             android:id="@+id/help"
             android:layout_width="match_parent"
             android:layout_height="@dimen/help_bar_height_two_items" />
