DE3897 - Fixed line separators on the FAQ page. Now all cells in the lists have dotted lines as their separators. To enable this, hardware acceleration had to be disabled for these fragments on devices with API 11 or higher. Fixed the separator lines from not going all the way across the detail FAQ page. Added code that allows the scroll view to maintain its position on rotation change.

--- a/Discover-Bank-Phone/res/layout/faq_landing_page.xml
+++ b/Discover-Bank-Phone/res/layout/faq_landing_page.xml
@@ -12,6 +12,8 @@
         android:padding="1dp"
         android:layout_marginTop="@dimen/between_related_elements_padding" 
         android:background="@drawable/rounded_table_corners_no_padding"
+        android:divider="@drawable/table_dotted_line"
+        android:dividerHeight="1px"
         >
     </ListView>
 
