ID: DE2736 - Schedule Payment - Landscape on NonBaseline Activates Inline Error(s) ID: DE4032 - ATM Locator - Blank screen in ATM Locator if user taps ToU and taps back ID: DE4293 - Sort Payees List alphabetically ID: DE4321 -Account Activity List Cleared when rotating Phone
Tested:
- Schedule Payment - Verified memo keeps focus on orientation change
- Schedule Payment - Verified amount has focus when navigating to page
- Schedule Payment - Verified amount keeps focus on rotation
- Schedule Payment - Verified if no fields have focus then it remains with no focus on rotation
- Schedule Payment - Verified inline errors are not activated on rotation
- Payees - Verified list is sorted when navigating to Select Payees or Manage Payees list
- Verified Review Payments List is not cleared when navigating to privacy and terms, rotating and navigating back
- Verified Account Activity List is not cleared when navigating to privacy and terms, rotating and navigating back
- Verified ATM Logged Out - supports rotation for map and list
- Verified ATM Logged Out - supports minimize and maximizing the app when in foreground
- Verified ATM Logged Out - Supports navigating to Privacy & Terms and back
- Verified ATM Logged In - supports rotation for map and list
- Verified ATM Logged In - supports minimizing and maximizing the app when in foreground
- Verified ATM Logged In - List is not cleared when navigating to privacy and terms, rotating and navigating back

--- a/Discover-Bank-Phone/res/layout/bank_atm_locator_activity.xml
+++ b/Discover-Bank-Phone/res/layout/bank_atm_locator_activity.xml
@@ -4,12 +4,11 @@
     android:layout_height="match_parent"
     android:orientation="vertical" >
     
-    <fragment class="com.discover.mobile.bank.atm.SearchNearbyFragment"
+    <FrameLayout
         android:id="@+id/map"
         android:layout_width="match_parent"
         android:layout_height="0dp" 
-        android:layout_weight="1"
-        android:name="com.google.android.gms.maps.MapFragment"/>
+        android:layout_weight="1"/>
     
 
 </LinearLayout>
