--- a/Discover-Bank-Phone/res/layout/old_general_discover_banner.xml
+++ b/Discover-Bank-Phone/res/layout/old_general_discover_banner.xml
@@ -10,6 +10,6 @@
         android:contentDescription="@string/image_description"
         android:layout_marginTop="14dp"
         android:layout_marginBottom="40dp"
-        android:src="@drawable/discover_logo" />
+        android:src="@drawable/common_discover_logo" />
 
 </merge>
