--- a/Discover-Bank-Phone/res/layout/bank_frequency_detail_view.xml
+++ b/Discover-Bank-Phone/res/layout/bank_frequency_detail_view.xml
@@ -128,15 +128,6 @@
                 android:singleLine="true"
                 android:text="@string/transfer_selected_date"
                 android:textColor="@color/field_copy" />
-
-            <TextView
-                android:id="@+id/date_error_label"
-                style="@style/inline_error_label"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="@dimen/forms_inner_padding"
-                android:text="You cannot schedule a transfer in the past."
-                android:visibility="gone" />
         </LinearLayout>
 
         <ImageView
@@ -151,13 +142,23 @@
             android:src="@drawable/gray_right_arrow" />
     </LinearLayout>
 
+    <TextView
+        android:id="@+id/date_error_label"
+        style="@style/inline_error_label"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/date_layout"
+        android:layout_marginBottom="@dimen/forms_inner_padding"
+        android:paddingLeft="@dimen/forms_inner_padding"
+        android:text="@string/empty"
+        android:visibility="gone" />
     <!-- End date layout items -->
 
     <View
         android:id="@+id/divider_line4"
         android:layout_width="fill_parent"
         android:layout_height="1dp"
-        android:layout_below="@+id/date_layout"
+        android:layout_below="@+id/date_error_label"
         android:layout_marginBottom="@dimen/forms_inner_padding"
         android:layout_marginLeft="@dimen/orange_button_margin_top"
         android:background="@drawable/table_solid_line" />
@@ -184,30 +185,15 @@
             android:button="@drawable/make_payment_radio_button"
             android:clickable="false" />
 
-        <LinearLayout
-            android:id="@+id/inner_count_layout"
+        <TextView
+            android:id="@+id/transactions_label"
+            style="@style/field_copy"
             android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="2.75"
+            android:layout_height="fill_parent"
             android:gravity="center_vertical"
-            android:orientation="vertical" >
-
-            <TextView
-                android:id="@+id/transactions_label"
-                style="@style/field_copy"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/transfer_transactions"
-                android:textColor="@color/field_copy" />
-
-            <TextView
-                android:id="@+id/transactions_error_label"
-                style="@style/inline_error_label"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Enter the number of total transfers, must be greater than 1."
-                android:visibility="gone" />
-        </LinearLayout>
+            android:layout_weight="2.75"
+            android:text="@string/transfer_transactions"
+            android:textColor="@color/field_copy" />
 
         <com.discover.mobile.common.ui.widgets.PositiveIntegerEditText
             android:id="@+id/transaction_amount"
@@ -219,13 +205,25 @@
             android:imeOptions="actionDone"
             android:textCursorDrawable="@null" />
     </LinearLayout>
+
+    <TextView
+        android:id="@+id/transactions_error_label"
+        style="@style/inline_error_label"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignLeft="@+id/cancelled_button"
+        android:layout_below="@+id/transaction_layout"
+        android:layout_marginBottom="@dimen/forms_inner_padding"
+        android:paddingLeft="@dimen/forms_inner_padding"
+        android:text="@string/empty"
+        android:visibility="gone" />
     <!-- End count items -->
 
     <View
         android:id="@+id/divider_line5"
         android:layout_width="fill_parent"
         android:layout_height="1dp"
-        android:layout_below="@+id/transaction_layout"
+        android:layout_below="@+id/transactions_error_label"
         android:layout_marginBottom="@dimen/forms_inner_padding"
         android:layout_marginLeft="@dimen/orange_button_margin_top"
         android:background="@drawable/table_solid_line" />
@@ -240,7 +238,7 @@
         android:orientation="horizontal"
         android:paddingLeft="@dimen/forms_inner_padding"
         android:paddingRight="@dimen/forms_inner_padding"
-        android:weightSum="5.5" >
+        android:weightSum="5" >
 
         <RadioButton
             android:id="@+id/dollar_button"
@@ -248,34 +246,19 @@
             android:layout_height="fill_parent"
             android:layout_gravity="center_vertical"
             android:layout_marginRight="@dimen/forms_inner_padding"
-            android:layout_weight=".5"
+            android:layout_weight="0.5"
             android:button="@drawable/make_payment_radio_button"
             android:clickable="false" />
 
-        <LinearLayout
-            android:id="@+id/inner_dollar_layout"
+        <TextView
+            android:id="@+id/dollar_label"
+            style="@style/field_copy"
             android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="2.75"
+            android:layout_height="fill_parent"
+            android:layout_weight="2.5"
             android:gravity="center_vertical"
-            android:orientation="vertical" >
-
-            <TextView
-                android:id="@+id/dollar_label"
-                style="@style/field_copy"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/transfer_dollar_amount"
-                android:textColor="@color/field_copy" />
-
-            <TextView
-                android:id="@+id/dollar_error_label"
-                style="@style/inline_error_label"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-				android:text="This amount must be greater than the send amount."
-                android:visibility="gone" />
-        </LinearLayout>
+            android:text="@string/transfer_dollar_amount"
+            android:textColor="@color/field_copy" />
 
         <TextView
             android:id="@+id/dollar"
@@ -293,10 +276,19 @@
             style="@style/pmt_amount_style"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_weight="1.75"
+            android:layout_weight="1.5"
             android:imeOptions="actionDone" />
     </LinearLayout>
 
+    <TextView
+        android:id="@+id/dollar_error_label"
+        style="@style/inline_error_label"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/dollar_layout"
+        android:paddingLeft="@dimen/forms_inner_padding"
+        android:text="@string/empty"
+        android:visibility="gone" />
     <!-- End dollar amount item -->
 
 </RelativeLayout>
