US7360 - TA14854 : Added calendar restriction so that a user is not able to select a date in the future that is more than a year from now. Added a calendar restriction that will select the next valid day after today for recurring transfers. Added client side validation for transfer money step one. US7982 - SONAR rules compliance fixes. Removed a duplicate method from BankStringsFormatter and updated existing uses to use a different method. Fixed several magic number warnings along with duplicate Strings in classes and values that could be replaced by local variables.

--- a/Discover-Bank-Phone/res/values/strings_bank_transfers.xml
+++ b/Discover-Bank-Phone/res/values/strings_bank_transfers.xml
@@ -48,4 +48,5 @@
 	
 	<!-- Error Labels -->
 	<string name="amount_less_than_twenty_five">Too low (less than $25)</string>
+	<string name="invalid_date">Please select a date</string>
 </resources>
